--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,16 +43,35 @@ jobs:
         path: build_output/
     - name: Create test files
       run: |
-        mkdir test
+        mkdir test 
         cd test
-        for ($i = 1; $i -le500; $i++) {
-               $filename = "test_" + $i + "_pptx"
-               New-Item -ItemType File -Path $filename
-               $filename = "test_" + $i + "_docx"
-               New-Item -ItemType File -Path $filename
-           }
+        for ($i = 1; $i -le 500; $i++) {
+          $filename = "test_" + $i + "_pptx"
+          New-Item -ItemType File -Path $filename > $null
+          $filename = "test_" + $i + "_docx"
+          New-Item -ItemType File -Path $filename > $null
+          $filename = "test_" + $i + "_xlsx"
+          New-Item -ItemType File -Path $filename > $null
+        }
+        copy test test2
         cd ../ 
+        echo all test files set!
     - name: Run NET 7.0 application
-      run: build_output/net7/Will_ExtRecover.exe test/
+      run: |
+        Measure-Command {
+          build_output/net7/Will_ExtRecover.exe test/ > $nul
+          } | Tee-Object -FilePath net7.log
+        echo NET 7.0 application finished!
     - name: Run NETFramework 4.8 application
-      run: build_output/netframework48/Will_ExtRecover.exe test/
+      run: |
+        Measure-Command {
+          build_output/netframework4.8/Will_ExtRecover.exe test2/ > $nul
+          } | Tee-Object -FilePath net4_8.log
+        echo NETFramework 4.8 application finished!
+    - name: upload logs
+      uses: actions/upload-artifact@v4
+      with:
+        name: logs
+        path: |
+          net7.log
+          net4_8.log
