--- a/Will_ExtRecover.ini
+++ b/Will_ExtRecover.ini
@@ -1,27 +1,28 @@
-.doc
-.docx
-.xls
-.xlsx
-.ppt
-.pptx
-.pdf
-.txt
-.rtf
-.jpg
-.jpeg
-.png
-.bmp
-.gif
-.zip
-.rar
-.7z
-.mp3
-.wav
-.mp4
-.avi
-.mkv
-.mpg
-.mpeg
-.flv
-.wmv
-.m4a
+[Extensions]
+1=.doc
+2=.docx
+3=.xls
+4=.xlsx
+5=.ppt
+6=.pptx
+7=.pdf
+8=.txt
+9=.rtf
+10=.jpg
+11=.jpeg
+12=.png
+13=.bmp
+14=.gif
+15=.zip
+16=.rar
+17=.7z
+18=.mp3
+19=.wav
+20=.mp4
+21=.avi
+22=.mkv
+23=.mpg
+24=.mpeg
+25=.flv
+26=.wmv
+27=.m4a
