--- a/Will_ExtRecover.csproj
+++ b/Will_ExtRecover.csproj
@@ -14,4 +14,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="8.0.0"/>
+  </ItemGroup>
 </Project>
