添加希沃白板(.enbx)文件预设

--- a/Will_ExtRecover.ini
+++ b/Will_ExtRecover.ini
@@ -1,4 +1,6 @@
 [Extensions]
+# 此配置文件预置了一些需要识别的扩展名。
+# 如需添加，需遵守下方的格式。
 1=.doc
 2=.docx
 3=.xls
@@ -26,3 +28,4 @@
 25=.flv
 26=.wmv
 27=.m4a
+28=.enbx
